--- a/notritionVendorsAPP/view/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/view/Base.lproj/Main.storyboard
@@ -470,14 +470,14 @@
             <objects>
                 <viewController id="y3p-En-GyC" customClass="ViewItemController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EVJ-hs-1vR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BRL-gj-9R1">
-                                <rect key="frame" x="0.0" y="88" width="414" height="1285"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRL-gj-9R1">
+                                <rect key="frame" x="0.0" y="88" width="414" height="1520"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FE8-QY-c5N">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FE8-QY-c5N">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1520"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W1R-da-eay">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
@@ -792,7 +792,6 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="FE8-QY-c5N" firstAttribute="top" secondItem="BRL-gj-9R1" secondAttribute="top" id="1RU-ZP-I6f"/>
-
                                     <constraint firstItem="FE8-QY-c5N" firstAttribute="height" secondItem="BRL-gj-9R1" secondAttribute="height" id="1sq-ig-YQF"/>
                                     <constraint firstAttribute="bottom" secondItem="FE8-QY-c5N" secondAttribute="bottom" id="H3a-6g-MWk"/>
                                     <constraint firstAttribute="trailing" secondItem="FE8-QY-c5N" secondAttribute="trailing" constant="126" id="hfF-ca-lWc"/>
@@ -811,6 +810,8 @@
                         <viewLayoutGuide key="safeArea" id="fvc-eg-jsR"/>
                     </view>
                     <navigationItem key="navigationItem" id="9Wl-Kc-Src"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="414" height="1200"/>
                     <connections>
                         <outlet property="commentTableView" destination="8S4-Rz-L8a" id="dPK-Ua-XTy"/>
                         <outlet property="genaralStackView" destination="40T-5d-UGo" id="NVW-rj-hJ3"/>
@@ -826,7 +827,40 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mhW-vz-xha" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="618.84057971014499" y="690.40178571428567"/>
+            <point key="canvasLocation" x="222" y="688"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="CWS-5l-BkR">
+            <objects>
+                <tableViewController id="do9-7y-hXX" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bLU-6Q-nRM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="ZbB-wv-bb7">
+                            <rect key="frame" x="0.0" y="72" width="414" height="189"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="iVF-VJ-4KX">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iVF-VJ-4KX" id="BJq-Nn-UGW">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="do9-7y-hXX" id="GRx-qS-eQq"/>
+                            <outlet property="delegate" destination="do9-7y-hXX" id="XKH-iD-bBc"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vOH-Qw-6w7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1544.9275362318842" y="203.57142857142856"/>
         </scene>
         <!--Hight Rating-->
         <scene sceneID="W7y-GX-8kg">
