--- a/notritionVendorsAPP/viewController/hightRating/view/AddNewCommentCell.xib
+++ b/notritionVendorsAPP/viewController/hightRating/view/AddNewCommentCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddNewCMT" rowHeight="194" id="KGk-i7-Jjw" customClass="AddNewCommentCell" customModule="notritionVendorsAPP" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewCommentCell" rowHeight="194" id="KGk-i7-Jjw" customClass="AddNewCommentCell" customModule="notritionVendorsAPP" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="311" height="194"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="addNewCmt" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,17 +20,29 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fbx-QL-Gx0" customClass="CosmosView" customModule="Cosmos">
-                        <rect key="frame" x="0.0" y="0.0" width="311" height="20"/>
+                        <rect key="frame" x="0.0" y="15" width="311" height="20"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Tp0-6A-oDw"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="text" value="Rate me"/>
+                            <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
+                                <color key="value" red="1" green="0.66666666669999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="emptyBorderColor">
+                                <color key="value" red="1" green="0.66666666669999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="filledBorderColor">
+                                <color key="value" red="1" green="0.66666666669999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RZl-71-hLP">
-                        <rect key="frame" x="0.0" y="30" width="311" height="30"/>
+                        <rect key="frame" x="0.0" y="45" width="311" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="1kR-0j-5RU"/>
                         </constraints>
@@ -38,8 +50,8 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1Wc-La-k9e">
-                        <rect key="frame" x="0.0" y="70" width="311" height="123.5"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="dj fdjbvd df dbf hjdbv. hjdbvh bfvbhdjfbv fhjbv dh. ffhv bdfh bfhjbvmb dfbv hfvbdf vf bv fbvfhd vb" translatesAutoresizingMaskIntoConstraints="NO" id="1Wc-La-k9e">
+                        <rect key="frame" x="0.0" y="85" width="311" height="118.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -51,17 +63,22 @@
                     <constraint firstItem="1Wc-La-k9e" firstAttribute="leading" secondItem="Fbx-QL-Gx0" secondAttribute="leading" id="8Lv-1D-Fm5"/>
                     <constraint firstItem="RZl-71-hLP" firstAttribute="width" secondItem="Fbx-QL-Gx0" secondAttribute="width" id="JlQ-uB-qtu"/>
                     <constraint firstItem="RZl-71-hLP" firstAttribute="trailing" secondItem="Fbx-QL-Gx0" secondAttribute="trailing" id="SQd-eW-xnr"/>
-                    <constraint firstItem="Fbx-QL-Gx0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Wr1-xA-AOs"/>
+                    <constraint firstItem="Fbx-QL-Gx0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Wr1-xA-AOs"/>
                     <constraint firstItem="RZl-71-hLP" firstAttribute="leading" secondItem="Fbx-QL-Gx0" secondAttribute="leading" id="gsL-iF-qmJ"/>
                     <constraint firstItem="Fbx-QL-Gx0" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="h3E-CS-t8o"/>
                     <constraint firstItem="RZl-71-hLP" firstAttribute="top" secondItem="Fbx-QL-Gx0" secondAttribute="bottom" constant="10" id="kHu-t8-Toa"/>
                     <constraint firstItem="Fbx-QL-Gx0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="s40-ea-2iU"/>
                     <constraint firstItem="1Wc-La-k9e" firstAttribute="top" secondItem="RZl-71-hLP" secondAttribute="bottom" constant="10" id="s7U-0F-Dxm"/>
                     <constraint firstItem="1Wc-La-k9e" firstAttribute="width" secondItem="Fbx-QL-Gx0" secondAttribute="width" id="uaq-Ok-zkH"/>
-                    <constraint firstItem="1Wc-La-k9e" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottom" id="xD3-21-pqJ"/>
+                    <constraint firstItem="1Wc-La-k9e" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottom" constant="10" id="xD3-21-pqJ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="content" destination="1Wc-La-k9e" id="jHh-TQ-WYK"/>
+                <outlet property="rating" destination="Fbx-QL-Gx0" id="SJp-ee-zFZ"/>
+                <outlet property="title" destination="RZl-71-hLP" id="OHC-GP-7Lg"/>
+            </connections>
             <point key="canvasLocation" x="125.59999999999999" y="222.1889055472264"/>
         </tableViewCell>
     </objects>
