--- a/notritionVendorsAPP/viewController/hightRating/view/GeneralInforItemCell.xib
+++ b/notritionVendorsAPP/viewController/hightRating/view/GeneralInforItemCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="317" id="KGk-i7-Jjw" customClass="GeneralInforItemCell" customModule="notritionVendorsAPP" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GeneralInforCell" rowHeight="317" id="KGk-i7-Jjw" customClass="GeneralInforItemCell" customModule="notritionVendorsAPP" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="389" height="317"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,13 +20,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kLr-1D-u6m">
-                        <rect key="frame" x="0.0" y="0.0" width="389" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="389" height="200.5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="200" id="A7A-X5-USI"/>
                         </constraints>
                     </imageView>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qsb-mH-nth">
-                        <rect key="frame" x="10" y="210" width="379" height="40"/>
+                        <rect key="frame" x="10" y="210.5" width="379" height="40"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="XFt-3C-V9c"/>
@@ -36,7 +36,7 @@
                         <textInputTraits key="textInputTraits" textContentType="name"/>
                     </textField>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="ecx-SJ-fph">
-                        <rect key="frame" x="0.0" y="260" width="389" height="50"/>
+                        <rect key="frame" x="0.0" y="260.5" width="389" height="50"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f8R-qm-8nN">
                                 <rect key="frame" x="0.0" y="0.0" width="72" height="50"/>
@@ -159,7 +159,7 @@
                     <constraint firstItem="kLr-1D-u6m" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="og9-tR-Vnf"/>
                     <constraint firstAttribute="trailing" secondItem="ecx-SJ-fph" secondAttribute="trailing" id="sbQ-4c-zEC"/>
                     <constraint firstItem="qsb-mH-nth" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" constant="-10" id="ue9-AN-Eba"/>
-                    <constraint firstAttribute="bottom" secondItem="ecx-SJ-fph" secondAttribute="bottom" constant="-20" id="z0r-kp-ch0"/>
+                    <constraint firstAttribute="bottom" secondItem="ecx-SJ-fph" secondAttribute="bottom" constant="10" id="z0r-kp-ch0"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
