--- a/notritionVendorsAPP/View/LogInAndLogOut.storyboard
+++ b/notritionVendorsAPP/View/LogInAndLogOut.storyboard
@@ -117,10 +117,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="aN4-10-5qd">
-                                <rect key="frame" x="10" y="74" width="355" height="370"/>
+                                <rect key="frame" x="10" y="74" width="355" height="410"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="za5-KO-f4m">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="100"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="za5-KO-f4m">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="140"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nutrition_icon" translatesAutoresizingMaskIntoConstraints="NO" id="PXg-Hz-uLj">
                                                 <rect key="frame" x="127.5" y="0.0" width="100" height="100"/>
@@ -129,14 +129,23 @@
                                                     <constraint firstAttribute="height" priority="999" constant="100" id="pdj-AJ-pip"/>
                                                 </constraints>
                                             </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZg-ar-h7W">
+                                                <rect key="frame" x="97.5" y="110" width="160" height="30"/>
+                                                <state key="normal" title="Choose the avatar here">
+                                                    <color key="titleColor" red="0.30196078431372547" green="0.68235294117647061" blue="0.85490196078431369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="chooseAvatarpressed:" destination="OuZ-m9-mNt" eventType="touchUpInside" id="lw8-Uw-rVs"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="e5e-P2-9fg"/>
+                                            <constraint firstAttribute="height" constant="140" id="e5e-P2-9fg"/>
                                             <constraint firstItem="PXg-Hz-uLj" firstAttribute="centerX" secondItem="za5-KO-f4m" secondAttribute="centerX" id="jGl-HS-lCT"/>
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="NoM-lx-tXw">
-                                        <rect key="frame" x="0.0" y="110" width="355" height="260"/>
+                                        <rect key="frame" x="0.0" y="150" width="355" height="260"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NOP-YD-57G">
                                                 <rect key="frame" x="25" y="0.0" width="305" height="40"/>
@@ -156,7 +165,7 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JWk-rj-eoQ">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JWk-rj-eoQ">
                                                 <rect key="frame" x="25" y="110" width="305" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="epF-3G-lLH"/>
@@ -208,14 +217,19 @@
                     </view>
                     <navigationItem key="navigationItem" id="hP2-oq-UTH">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="zCn-NW-obz"/>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="0ba-Fg-TTF"/>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="0ba-Fg-TTF">
+                            <connections>
+                                <action selector="donePressed:" destination="OuZ-m9-mNt" id="9Dx-45-11C"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="address" destination="JWk-rj-eoQ" id="eag-jw-zuc"/>
-                        <outlet property="confirmPassword" destination="hOt-DQ-vHq" id="r6p-M3-rn6"/>
-                        <outlet property="password" destination="uRT-jI-rhM" id="uVL-Nz-uAd"/>
-                        <outlet property="phone" destination="eGQ-RH-Raq" id="XDg-Tn-oCz"/>
-                        <outlet property="username" destination="NOP-YD-57G" id="xxB-I2-t5L"/>
+                        <outlet property="avatarImage" destination="PXg-Hz-uLj" id="q8u-sM-UhK"/>
+                        <outlet property="confirmPassTxt" destination="hOt-DQ-vHq" id="JAb-wk-Um7"/>
+                        <outlet property="emailTxt" destination="JWk-rj-eoQ" id="ilZ-oQ-UYg"/>
+                        <outlet property="passTxt" destination="uRT-jI-rhM" id="WSW-kq-LIh"/>
+                        <outlet property="phoneTxt" destination="eGQ-RH-Raq" id="BBs-bU-sOK"/>
+                        <outlet property="userNameTxt" destination="NOP-YD-57G" id="mg9-Sc-iQL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tA6-a8-wWg" userLabel="First Responder" sceneMemberID="firstResponder"/>
